--- a/Sistema/Api/Api.csproj
+++ b/Sistema/Api/Api.csproj
@@ -12,5 +12,6 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.11"/>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.11"/>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.11"/>
   </ItemGroup>
 </Project>
